Changelog: add time-of-day for each entry and fix viewport overflow issues
Changelog entries now display the actual time of day when each new version was tagged.
(All times displayed in-game are local.)

Also fixes issues where the changelog screen extended past the browser viewport
by changing the modal body `max-height` to use `rem` instead of `vh`.

--- a/css/spni.css
+++ b/css/spni.css
@@ -924,7 +924,7 @@ label {
  ************************************************************/
 
 #version-modal .modal-body {
-    max-height: 50vh;
+    max-height: 50rem;
     overflow-y: scroll;
 }
 
@@ -934,12 +934,12 @@ label {
 }
 
 .changelog-date-label {
-    width: 15%;
+    width: 25%;
     padding-bottom: 1.5%
 }
 
 .changelog-entry-text {
-    width: 75%;
+    width: 65%;
     padding-bottom: 1.5%
 }
 
